--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
-    "mongoose": "^7.0.4",
+    "mongodb": "^5.3.0",
+    "mongoose": "^6.3.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "@types/async": "^3.2.20",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
