--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "url": "https://github.com/fjuren/fakebook-api.git"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/passport-jwt": "^3.0.8",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
