--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/passport-jwt": "^3.0.8",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
