--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^1.4.7",
     "@types/passport": "^1.0.12",
     "@types/passport-jwt": "^3.0.8",
     "bcryptjs": "^2.4.3",
@@ -31,6 +32,7 @@
     "mongodb": "^5.3.0",
     "mongoose": "^6.3.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1"
   },
