--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/multer": "^1.4.7",
     "@types/passport": "^1.0.12",
+    "@types/passport-facebook-token": "^0.4.35",
     "@types/passport-jwt": "^3.0.8",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -35,7 +36,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
-    "passport-facebook": "^3.0.0",
+    "passport-facebook-token": "^4.0.0",
     "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
@@ -46,7 +47,6 @@
     "@types/jest": "^29.4.0",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.14.6",
-    "@types/passport-facebook": "^2.1.11",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
