--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1"
+    "passport-jwt": "^4.0.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
