--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An API used for fakebook",
   "main": "src/index.ts",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "node ./dist/src/index.js",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "lint": "eslint --fix src test",
@@ -42,10 +42,10 @@
     "@faker-js/faker": "^7.6.0",
     "@types/async": "^3.2.20",
     "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.4.0",
     "@types/morgan": "^1.9.4",
-    "@types/node": "^18.14.6",
+    "@types/node": "^18.19.3",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
@@ -57,7 +57,7 @@
     "nodemon": "^2.0.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "typescript": "^4.9.5"
   }
 }
