--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "fakebook-api",
   "version": "0.0.0",
   "description": "An API used for fakebook",
-  "main": "src/index.ts",
+  "main": "dist/src/index.js",
   "scripts": {
-    "start": "node ./dist/src/index.js",
+    "start": "node /app/dist/src/index.js",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "lint": "eslint --fix src test",
@@ -41,10 +41,10 @@
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@types/async": "^3.2.20",
-    "@types/cors": "^2.8.13",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.4.0",
-    "@types/morgan": "^1.9.4",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^18.19.3",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
