--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "firebase": "^10.7.1",
     "helmet": "^6.0.1",
     "mime": "^3.0.0",
     "mongodb": "^5.3.0",
