--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "firebase": "^10.7.1",
+    "firebase-admin": "^12.0.0",
     "helmet": "^6.0.1",
     "mime": "^3.0.0",
     "mongodb": "^5.3.0",
