--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "firebase": "^10.7.1",
     "firebase-admin": "^12.0.0",
