--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An API used for fakebook",
   "main": "dist/src/index.js",
   "scripts": {
-    "start": "node /app/dist/src/index.js",
+    "start": "node dist/src/index.js",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "lint": "eslint --fix src test",
